zaki/ fix_staging_bugs (#1613)
* fix: use select native for mobile instead of autocomplete

* fix: mt5 success dialog button alignment

* style: make placeholder text end with ellipsis if it overflows

* fix: mt5 button width and alignment of check icon for success dialog

* fix: mt5 pending verification button dialog fix

* refactor: removed unused redundant styles

--- a/packages/components/src/components/select-native/select-native.scss
+++ b/packages/components/src/components/select-native/select-native.scss
@@ -49,12 +49,14 @@
         color: var(--text-less-prominent);
         transform-origin: top left;
         line-height: 1.4rem;
+        white-space: nowrap;
+        max-width: calc(100% - 3.6rem);
+        text-overflow: ellipsis;
+        overflow: hidden;
 
         &--has-value {
             transform: translate(0, -1.8rem) scale(0.75);
             color: var(--text-general);
-            white-space: nowrap;
-            text-overflow: ellipsis;
             max-width: 100%;
         }
         &--disabled {
